objects/ASI_CRM_City_Official__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Names__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Confirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>City Official</relationshipLabel>
        <relationshipName>City_Official</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Date__c</fullName>
        <label>Depletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>City Official</relationshipLabel>
        <relationshipName>City_Official</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>TEXT(MONTH(ASI_CRM_Depletion_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Official_Data_BT__c</fullName>
        <label>Official Data (BT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Official_Data__c</fullName>
        <label>Official Data</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR(ASI_CRM_Depletion_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>City Official</label>
    <listViews>
        <fullName>ASI_CRM_CN_Confirmed_City_Official</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Greater_Region_Code__c</columns>
        <columns>ASI_CRM_City__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Official_Data__c</columns>
        <columns>ASI_CRM_CN_Confirm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_CN_Confirm__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CN Confirmed City Official</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_City__c</columns>
        <columns>ASI_CRM_Depletion_Date__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Official_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Confirmed_City_Official_by_city_month</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Greater_Region_Code__c</columns>
        <columns>ASI_CRM_City__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Year__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Official_Data__c</columns>
        <columns>ASI_CRM_CN_Confirm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_CN_Confirm__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_CRM_City__c</field>
            <operation>contains</operation>
            <value>贵阳</value>
        </filters>
        <filters>
            <field>ASI_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>08</value>
        </filters>
        <label>CN Confirmed City Official by city&amp;month</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>City Official Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>City Official</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_City_Official</fullName>
        <active>true</active>
        <label>ASI CRM CN City Official</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_BA__c</fullName>
        <label>Share To BA</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_Finance__c</fullName>
        <label>Share To Finance</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_RTMK__c</fullName>
        <label>Share To RTMK</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASI_CRM_CN_Share_To_WS_Manager__c</fullName>
        <label>Share To WS Manager</label>
    </sharingReasons>
</CustomObject>